metadata/metadata/objects/Vehicle__c.object
<CustomObject>
    <description>Captures the make, manufacture and year of the vehicle.</description>
    <fields>
        <fullName>Contact_Lookup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Vehicles</relationshipLabel>
        <relationshipName>Vehicles</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <picklist>
            <picklistValues>
                <fullName>Honda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harley Davidson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suzuki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aprila</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yamaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kawasaki</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ducati</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <label>Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <picklist>
            <controllingField>Make__c</controllingField>
            <picklistValues>
                <fullName>Buell</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GSX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RS244</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBR650</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CBR750</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hypermotard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuono</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sport bikes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cruiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Touring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scooter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Vehicle</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Vehicle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vehicles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>